Fix unaligned requestPage and action
There was a bug where the request page was on one line, but the `View`
action was floating to the next one.

--- a/style.less
+++ b/style.less
@@ -97,7 +97,6 @@
         li {
 
             position: relative;
-            white-space: pre;
 
             div.actions:hover:before {
                 content: '';
